--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,11 @@
 language: python
-sudo: false
 python:
+  - "3.2"
+  - "3.3"
+  - "3.4"
   - "3.5"
-
-install: "pip3 install -r requirements.txt"
-
+# command to install dependencies
+#install:
+#  - pip install -r requirements.txt
+# command to run tests
+script: python -m unittest
