melhorias no log

--- a/src/parametros.ini
+++ b/src/parametros.ini
@@ -1,14 +1,14 @@
 [BANCODEDADOS]
-IPSERVIDOR = 127.0.0.1
-NOMEBANCO = condominio
-PORTA = 5432
-CLIENTEENCODING = UTF8
-USUARIO = dizaro
+IPSERVIDOR : 127.0.0.1
+NOMEBANCO : condominio
+PORTA : 5432
+CLIENTEENCODING : UTF8
+USUARIO : dizaro
 SENHA = Deveema
 
 [LOG]
-LOG_CAMINHO = /home/john/sistemas/desktop/condominio/src/logsistema.txt
-TIPO_LOG = DEBUG
+LOG_CAMINHO : /home/john/sistemas/desktop/condominio/src/logsistema.txt
+TIPO_LOG : INFO
 ##############################################################################
 #OS TIPO_LOG podem ser :('DEBUG', 'INFO', 'WARNING', 'ERROR', 'CRITICAL').
 #DEBUG  ----->Detailed information, typically of interest only when diagnosing problems.
@@ -19,4 +19,5 @@ TIPO_LOG = DEBUG
 #ERROR  ----->Due to a more serious problem, the software has not been able to perform some function.
 #CRITICAL---->A serious error, indicating that the program itself may be unable to continue running.
 ##############################################################################
+FORMATO_LOG : '%(levelname)s: \t%(asctime)s - \t%(filename)s - %(funcName)s - %(module)s - %(lineno)d - %(message)s'
 
