--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,4 @@
 # Created by .ignore support plugin (hsz.mobi)
-### Python template
-# Byte-compiled / optimized / DLL files
-__pycache__/
-*.py[cod]
-*$py.class
-
-# C extensions
-*.so
 
 # Distribution / packaging
 .Python
@@ -34,6 +26,7 @@ wheels/
 *.spec
 
 # Installer logs
+logsistema.txt
 pip-log.txt
 pip-delete-this-directory.txt
 
