--- a/src/parametros.ini
+++ b/src/parametros.ini
@@ -7,7 +7,7 @@ USUARIO : dizaro
 SENHA = Deveema
 
 [LOG]
-LOG_CAMINHO : /home/john/sistemas/desktop/condominio/src/logsistema.txt
+LOG_CAMINHO : /home/john/sistemas/desktop/condominio/src/logsistema.log
 TIPO_LOG : INFO
 ##############################################################################
 #OS TIPO_LOG podem ser :('DEBUG', 'INFO', 'WARNING', 'ERROR', 'CRITICAL').
