Acertos referente a nova forma de mostrar os icones nos campos

--- a/src/parametros.ini
+++ b/src/parametros.ini
@@ -1,13 +1,15 @@
+[AMBIENTE]
+TELA = menu-principal314.glade
 [BANCODEDADOS]
 IPSERVIDOR : 127.0.0.1
 NOMEBANCO : condominio
 PORTA : 5432
 CLIENTEENCODING : UTF8
-USUARIO : dizaro
-SENHA = Deveema
+USUARIO : desenvolvedor
+SENHA = zxcasdqwe
 
 [LOG]
-LOG_CAMINHO : /home/john/sistemas/desktop/condominio/src/logsistema.log
+LOG_CAMINHO : /home/john/Documentos/sistemas_em_desenvolvimento/desktop/condominio/src/sqllogsistema.log
 TIPO_LOG : INFO
 ##############################################################################
 #OS TIPO_LOG podem ser :('DEBUG', 'INFO', 'WARNING', 'ERROR', 'CRITICAL').
