--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,20 @@
-psycopg2==2.6.2
-pytest==3.0.6
-
-
+astroid==1.6.4
+atomicwrites==1.1.5
+attrs==18.1.0
+certifi==2018.4.16
+flake8==3.5.0
+lazy-object-proxy==1.3.1
+mccabe==0.6.1
+more-itertools==4.2.0
+pluggy==0.6.0
+psycopg2==2.7.4
+py==1.5.3
+pycairo==1.16.3
+pycodestyle==2.3.1
+pyflakes==1.6.0
+pygobject==3.28.3
+pytest==3.6.1
+requirements-detector==0.5.2
+shell==1.0.1
+six==1.11.0
+wrapt==1.10.11
