--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,56 @@
-astroid==1.6.4
-atomicwrites==1.1.5
-attrs==18.1.0
-certifi==2018.4.16
-flake8==3.5.0
-lazy-object-proxy==1.3.1
-mccabe==0.6.1
-more-itertools==4.2.0
-pluggy==0.6.0
-psycopg2==2.7.4
-py==1.5.3
-pycairo==1.16.3
-pycodestyle==2.3.1
-pyflakes==1.6.0
-pygobject==3.28.3
-pytest==3.6.1
-requirements-detector==0.5.2
-shell==1.0.1
-six==1.11.0
-wrapt==1.10.11
+# This file may be used to create an environment using:
+# $ conda create --name <env> --file <this file>
+# platform: linux-64
+adwaita-icon-theme=3.20=1
+astroid=1.6.4=py36_0
+at-spi2-atk=2.18.1=2
+at-spi2-core=2.18.3=2
+atk=2.18.0=3
+ca-certificates=2018.03.07=0
+cairo=1.14.10=0
+cairo-gobject=1.12.18=8
+certifi=2018.4.16=py36_0
+coverage=4.5.1=py36h14c3975_0
+dbus-client=1.10.10=0
+fontconfig=2.12.6=0
+freetype=2.8.1=0
+gdk-pixbuf=2.32.2=2
+gettext=0.19.8.1=0
+glib=2.55.0=0
+gobject-introspection=1.55.0=py36_0
+gtk3=3.14.15=4
+harfbuzz=1.0.6=3
+icu=58.2=h9c2bf20_1
+jpeg=9b=h024ee3a_2
+krb5=1.14.6=0
+lazy-object-proxy=1.3.1=py36_0
+libffi=3.2.1=hd88cf55_4
+libgcc-ng=7.2.0=hdf63c60_3
+libiconv=1.15=0
+libpng=1.6.34=hb9fc6fc_0
+libpq=9.6.3=0
+libstdcxx-ng=7.2.0=hdf63c60_3
+libtiff=4.0.9=he85c1e1_1
+libuuid=1.0.3=h1bed415_2
+libxcb=1.13=h1bed415_1
+libxml2=2.9.8=h26e45fe_1
+modern-xorg-stack=2016.03=1
+openssl=1.0.2o=h20670df_0
+pango=1.38.1=2
+pcre=8.42=h439df22_0
+pip=10.0.1=py36_0
+pixman=0.34.0=hceecf20_3
+psycopg2=2.7.4=py36_0
+pycairo=1.16.3=py36_0
+pygobject=3.28.3=py36h23641be_0
+python=3.6.2=0
+readline=6.2=2
+requirements-detector=0.5.2=py36_0
+setuptools=39.2.0=py36_0
+six=1.11.0=py36_1
+sqlite=3.13.0=0
+tk=8.5.18=0
+wheel=0.31.1=py36_0
+wrapt=1.10.11=py36_0
+xz=5.2.4=h14c3975_4
+zlib=1.2.11=ha838bed_2
