--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,21 @@ python:
   - "3.4"
   - "3.5"
   - "3.6"
+
+# command to install dependencies
+install:
+    - mkdir -p ${HOME}/cache/pkgs
+    - bash ${HOME}/cache/miniconda.sh -b -p ${CONDA_INSTALL_LOCN}
+    - source ${CONDA_INSTALL_LOCN}/bin/activate root
+    - conda update --yes --quiet conda
+
+    # Re-use the packages in the cache, and download any new ones into that location.
+    - rm -rf ${CONDA_INSTALL_LOCN}/pkgs && ln -s ${HOME}/cache/pkgs ${CONDA_INSTALL_LOCN}/pkgs
+
+    # Now do the things we need to do to install it.
+    - conda install --file requirements.txt coverage coveralls mock pytest pytest-cov ${CONDA_PKGS} --yes --quiet -c conda-forge
+    - python -m pip install -e .
+
+
+script:
+  - pytest # or py.test for Python versions 3.5 and below
