--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ install:
     - conda update --yes --quiet conda
 
     # Re-use the packages in the cache, and download any new ones into that location.
-    - rm -rf ${CONDA_INSTALL_LOCN}/pkgs && ln -s ${HOME}/cache/pkgs ${CONDA_INSTALL_LOCN}/pkgs
+    #- rm -rf ${CONDA_INSTALL_LOCN}/pkgs && ln -s ${HOME}/cache/pkgs ${CONDA_INSTALL_LOCN}/pkgs
 
     # Now do the things we need to do to install it.
     - conda install --file requirements.txt coverage coveralls mock pytest pytest-cov ${CONDA_PKGS} --yes --quiet -c conda-forge
