--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ install:
     #- rm -rf ${CONDA_INSTALL_LOCN}/pkgs && ln -s ${HOME}/cache/pkgs ${CONDA_INSTALL_LOCN}/pkgs
 
     # Now do the things we need to do to install it.
-    - conda install --file requirements.txt --yes --quiet -c conda-forge
+    - conda install --file requirements.txt
     #- python -m pip install -e .
 
 
