--- a/.travis.yml
+++ b/.travis.yml
@@ -6,14 +6,28 @@ python:
   - "3.5"
   - "3.6"
 
-env:
-    global:
-       - CONDA_INSTALL_LOCN="${HOME}/conda"
-
 install:
-    - mkdir -p ${HOME}/cache/pkgs
-    - source activate ${CONDA_INSTALL_LOCN}/
-    - conda install --yes --file requirements.txt
+
+  #- sudo apt-get update
+  # We do this conditionally because it saves us some downloading if the
+  # version is the same.
+  - if [[ "$TRAVIS_PYTHON_VERSION" == "2.7" ]]; then
+      wget https://repo.continuum.io/miniconda/Miniconda2-latest-Linux-x86_64.sh -O miniconda.sh;
+    else
+      wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
+    fi
+  - bash miniconda.sh -b -p $HOME/miniconda
+  - export PATH="$HOME/miniconda/bin:$PATH"
+  - hash -r
+  - conda config --set always_yes yes --set changeps1 no
+  - conda update -q conda
+  # Useful for debugging any issues with conda
+  - conda info -a
+
+  # Replace dep1 dep2 ... with your dependencies
+  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION requirements.txt
+  - source activate test-environment
+  - python setup.py install
 
 script:
   - pytest # or py.test for Python versions 3.5 and below
