--- a/.travis.yml
+++ b/.travis.yml
@@ -21,4 +21,4 @@ install:
   # Replace dep1 dep2 ... with your dependencies
   - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION
   - source activate test-environment
-  - python setup.py install
+  - python menuprinc.py
