--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ python:
   - "3.5"
   - "3.6"
 install:
+  - sudo apt install libgirepository1.0-dev
   - pip install -r requirements.txt
 script:
   - pytest
