--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,12 @@ language: python
 python:
   - "3.5"
   - "3.6"
+
+before_install:
+  - sudo apt install libgirepository1.0-dev
+
 install:
-  - pip install libgirepository1.0-dev
   - pip install -r requirements.txt
+  -
 script:
   - pytest
